--- a/result4.html
+++ b/result4.html
@@ -19,8 +19,8 @@
                 crossorigin="anonymous"></script>
             <!-- <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.10/relation.min.js"></script> -->
             <!-- <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.10/span_label.min.js"></script> -->
-            <script src="relation.js"></script>
-            <script src="span_label.js"></script>
+            <script src="relation.min.js"></script>
+            <script src="span_label.min.js"></script>
             <style>
                 .flex-container {
                     display: flex;
