--- a/instruction.html
+++ b/instruction.html
@@ -234,6 +234,12 @@
                                 Note that:
                                 <div style="display: flex;">
                                     <div style="flex: none;">1&nbsp;.&nbsp;</div>
+                                    <div>
+                                        Each span represents a life event or part of description of life event.
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">2&nbsp;.&nbsp;</div>
                                     <div>The mapping between the spans in the recalled and retold stories may be
                                         one-to-one, one-to-many, many-to-one, or many-to-many to denote the relation
                                         types of "Match" and "Conflict".<br>
@@ -246,12 +252,12 @@
                                     </div>
                                 </div>
                                 <div style="display: flex;">
-                                    <div style="flex: none;">2&nbsp;.&nbsp;</div>
+                                    <div style="flex: none;">3&nbsp;.&nbsp;</div>
                                     <div>All labeled spans of retold story should be tagged at least one relation type.
                                     </div>
                                 </div>
                                 <div style="display: flex;">
-                                    <div style="flex: none;">3&nbsp;.&nbsp;</div>
+                                    <div style="flex: none;">4&nbsp;.&nbsp;</div>
                                     <div>Because the time gap between recalled story and retold story is greater than
                                         half year, the relative time duration may be different, but relation might be
                                         "Match". (Row1: relative time description; Row2: absolute time description)
