add email field

--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
                             <crowd-text-area id="opinion" name="opinion"
                                 placeholder='There are something strange in the articles, ex: two article are totally different. '>
                             </crowd-text-area>
+                            <h4>More task</h4>
+                            <div>This task is one of the small samples we released. If you want to label more tasks like
+                                this, please leave your email. We'll contact you, and the reward of the tasks will be upgraded.
+                            </div>
+                            <crowd-input id="email" name="email" type="email">
+                            </crowd-input>
                         </crowd-form>
                     </div>
                 </div>
